--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/activity_journal?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/activity_journal?schema=public"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
