--- a/backend/package.json
+++ b/backend/package.json
@@ -33,8 +33,12 @@
     "@types/node": "^24.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "prisma": "^6.12.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.12.0"
   }
 }
