--- a/backend/package.json
+++ b/backend/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.4.2",
     "prisma": "^6.12.0",
     "source-map-support": "^0.5.21",
