setup redux store

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,7 @@ NODE_ENV="development"
 
 # CORS
 FRONTEND_URL="http://localhost:3000"
+
+# Demo user
+DEMO_USER_EMAIL="demo@example.com"
+DEMO_USER_PASSWORD="demo123"
