--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "clsx": "^2.1.1",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.1.0",
-    "shadcn-ui": "^0.9.5"
+    "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
