--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -33,6 +34,7 @@
     "react-redux": "^9.2.0",
     "recharts": "^3.1.0",
     "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5"
   },
